fix:readme updated

--- a/.env-example
+++ b/.env-example
@@ -3,3 +3,4 @@ AWS_SECRET_ACCESS_KEY=AWS_SECRET_ACCESS_KEY
 S3_REGION=S3_REGION
 BUCKET_NAME=BUCKET_NAME
 SECRET_KEY=SECRET_KEY
+DATABASE_URL=DATABASE_URL
